--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>02-filter-interceptor</module>
         <module>03-spring-security</module>
         <module>04-java-concurrent</module>
+        <module>05-spring-boot-oauth2</module>
     </modules>
 
     <properties>
