--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>05-spring-boot-oauth2</module>
         <module>03-spring-security-jwt-mysql</module>
         <module>06-filter-interceptor</module>
+        <module>06-filter</module>
     </modules>
 
     <properties>
