--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>03-spring-security-jwt-mysql</module>
         <module>06-filter-interceptor</module>
         <module>06-filter</module>
+        <module>06-Interceptor</module>
     </modules>
 
     <properties>
