--- a/03-authentication-authorization/03-spring-security-jwt-mysql/pom.xml
+++ b/03-authentication-authorization/03-spring-security-jwt-mysql/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>03-authentication-authorization</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
