--- a/02-Filter和Interceptor/interceptor-demo/pom.xml
+++ b/02-Filter和Interceptor/interceptor-demo/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>02-Filter和Interceptor</artifactId>
+        <artifactId>02-filter-interceptor</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
