--- a/02-Filter和Interceptor/pom.xml
+++ b/02-Filter和Interceptor/pom.xml
@@ -9,14 +9,14 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>02-Filter和Interceptor</artifactId>
+    <artifactId>02-filter-interceptor</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>filter-demo</module>
         <module>interceptor-demo</module>
-        <module>02-filter</module>
-        <module>02-Interceptor</module>
-        <module>02-filter-interceptor</module>
+        <module>02-filter-demo</module>
+        <module>02-Interceptor-demo</module>
+        <module>02-filter-interceptor-demo</module>
     </modules>
 
     <properties>
