--- a/03-认证授权/03-securitydemo/pom.xml
+++ b/03-认证授权/03-securitydemo/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>02-Filter和Interceptor</artifactId>
+        <artifactId>03-认证授权</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>02-filter-interceptor</artifactId>
+    <artifactId>01-从这里复制模块</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
