--- a/03-认证授权/03-spring-boot-oauth2/pom.xml
+++ b/03-认证授权/03-spring-boot-oauth2/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>03-认证授权</artifactId>
+        <artifactId>03-auth</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
