--- a/04-Java并发/pom.xml
+++ b/04-Java并发/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>04-Java并发</artifactId>
+    <artifactId>04-concurrent</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
