--- a/02-Filter和Interceptor2/filter-demo/pom.xml
+++ b/02-Filter和Interceptor2/filter-demo/pom.xml
@@ -3,25 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.example</groupId>
-        <artifactId>parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
-    <packaging>pom</packaging>
 
-    <artifactId>03-auth</artifactId>
+    <groupId>com.example</groupId>
+    <artifactId>filter-demo</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <modules>
-        <module>03-spring-security-jwt-mysql</module>
-        <module>03-session-jwt</module>
-        <module>03-spring-boot-oauth2</module>
-    </modules>
 
 </project>
