--- a/03-Authentication-Authorization/03-session-jwt/pom.xml
+++ b/03-Authentication-Authorization/03-session-jwt/pom.xml
@@ -3,22 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <!-- 固定不变 -->
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>spring-boot-demo</artifactId>
+        <artifactId>03-Authentication-Authorization</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>03-auth</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>03-session-jwt</artifactId>
     <packaging>pom</packaging>
+    <version>0.0.1-SNAPSHOT</version>
 
     <modules>
-        <module>03-session-jwt</module>
-        <module>03-spring-boot-oauth2</module>
-        <module>03-spring-security-jwt-mysql</module>
+        <module>03-session-demo</module>
+        <module>03-jwt-demo</module>
     </modules>
 
     <properties>
@@ -27,30 +24,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.7.18</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
-        <!--web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--lombok-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 
