重构模块目录-最终版

--- a/03-Authentication-Authorization/03-session-demo/pom.xml
+++ b/03-Authentication-Authorization/03-session-demo/pom.xml
@@ -9,14 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>03-session-jwt</artifactId>
-    <packaging>pom</packaging>
-    <version>0.0.1-SNAPSHOT</version>
-
-    <modules>
-        <module>03-session-demo</module>
-        <module>03-jwt-demo</module>
-    </modules>
+    <artifactId>03-session-demo</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -28,12 +21,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
         </dependency>
     </dependencies>
 
