--- a/03-Authentication-Authorization/03-spring-security-demo/src/main/resources/application.properties
+++ b/03-Authentication-Authorization/03-spring-security-demo/src/main/resources/application.properties
@@ -2,3 +2,15 @@
 server.port=8080
 
 server.servlet.context-path=/demo
+
+#MySQL数据源
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/security-demo
+spring.datasource.username=root
+spring.datasource.password=root
+#SQL日志
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+knife4j.enable=true
+knife4j.setting.language=zh_cn
