--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 <!--        <module>02-Filter-Interceptor</module>-->
 <!--        <module>03-Authentication-Authorization</module>-->
         <module>05-Java</module>
+        <module>00-LeetCode</module>
         <!--        <module>04-Java-Concurrent</module>-->
     </modules>
 
